--- a/website/template.html
+++ b/website/template.html
@@ -17,8 +17,7 @@
 <div>There's also a Readme in the zip that you download. Most issues can be easily resolved by reading it (The first few lines are the most important). </div>
 
 <h3>Chatroom</h3>
-<div>IRC channel: <a href="https://webchat.freenode.net/?channels=goldberg_emulator">#goldberg_emulator@freenode</a> 
-You can also join it with: <a href="https://riot.im/app/#/room/#freenode_#goldberg_emulator:matrix.org">Riot</a> (recommended for people used to the bloated garbage named "discord") or any other matrix client.</div>
+<div>Matrix room: <a href="https://element.io/app/#/room/#goldberg:matrix.org">Element</a></div>
 
 <h3>Other Links</h3>
 <div><a href="https://www.reddit.com/r/GoldbergEmu/">Subreddit</a></div>
