--- a/website/template.html
+++ b/website/template.html
@@ -17,7 +17,7 @@
 <div>There's also a Readme in the zip that you download. Most issues can be easily resolved by reading it (The first few lines are the most important). </div>
 
 <h3>Chatroom</h3>
-<div>Matrix room: <a href="https://element.io/app/#/room/#goldberg:matrix.org">Element</a></div>
+<div>Matrix room: <a href="https://matrix.to/#/#goldberg:matrix.org">#goldberg:matrix.org</a></div>
 
 <h3>Other Links</h3>
 <div><a href="https://www.reddit.com/r/GoldbergEmu/">Subreddit</a></div>
